[package]
name = "updatify"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
windows-core = "0.62.2"

[dependencies.windows]
version = "0.62.2"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Shutdown",
    "Win32_System_UpdateAgent",
    "Win32_System_Variant",
]
